--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <input type="text" name="Test" id="Test">
     <script>
-        var name = "Nornasuha Zakaria";
+        var fullname = "Nornasuha Zakaria";
     </script>
 </body>
 </html>
