--- a/index2.html
+++ b/index2.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Test 2</title>
 </head>
 <body>
-    <input type="text" name="Test" id="Test">
-    <script>
-        var fullnames = "Nornasuha Zakaria";
-    </script>
+    ISI ISI DISINI
 </body>
 </html>
